-Implemented very bare bones cross-platform filesystem handling code -Edited some of the tests

--- a/lib/libLUCID/CMakeLists.txt
+++ b/lib/libLUCID/CMakeLists.txt
@@ -135,3 +135,4 @@ macro(add_test_executable TEST_NAME TEST_SOURCES)
 endmacro()
 
 add_test_executable(LUCIDFileTest test/LUCIDFileTest.cpp)
+add_test_executable(FilesystemTest test/FilesystemTest.cpp)
