-Implemented the basic Blob data structure -Removed some redundant code from the LUCIDFile class implementation -Added blobbing function stub

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 find_package(Doxygen)
+
+include_directories(lib/libLUCID/include)
+
 add_subdirectory(doc)
 add_subdirectory(lib)
 add_subdirectory(tools)
