--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 # Setup repos etc before installation
 before_install:
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-  - sudo add-apt-repository ppa:kalakris/cmake
+  - sudo add-apt-repository -y ppa:kalakris/cmake
   - sudo apt-get update -qq
   - sudo apt-get install cmake
 
