-Implemented the blob finding capability -Changed the LANEman shebang to use python 2

--- a/lib/libLUCID/CMakeLists.txt
+++ b/lib/libLUCID/CMakeLists.txt
@@ -172,4 +172,5 @@ add_test_executable(PixelTest test/PixelTest.cpp)
 add_test_executable(FrameTest test/FrameTest.cpp)
 add_test_executable(LUCIDFileTest test/LUCIDFileTest.cpp)
 add_test_executable(BlobTest test/BlobTest.cpp)
+add_test_executable(BlobFinderTest test/BlobFinderTest.cpp)
 add_test_executable(FilesystemTest test/FilesystemTest.cpp)
