--- a/plugins/plugins.ini
+++ b/plugins/plugins.ini
@@ -23,3 +23,8 @@ license: BSD 2-clause
 language: python
 stage: 2
 
+[BasicClusterAnalysis]
+author: Hector Stalker & Sam Kittle
+license: BSD 2-clause
+language: cpp
+stage: 1
