-Added inih library -Implemented a converter from raw data to an intermediate format

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Automatically adds any sub-directory to the build list
 
-include_directories(../lib/libLUCID/include)
+include_directories(
+    ../lib/libLUCID/include
+    ../lib/external/inih/cpp
+)
 
 add_custom_target(plugins)
 
