--- a/plugins/plugins.ini
+++ b/plugins/plugins.ini
@@ -23,6 +23,12 @@ license: BSD 2-clause
 language: python
 stage: 2
 
+[RawToIntermediate]
+author: Hector Stalker
+license: BSD 2-clause
+language: cpp
+stage: 0
+
 [BasicClusterAnalysis]
 author: Hector Stalker & Sam Kittle
 license: BSD 2-clause
