--- a/plugins/plugins.ini
+++ b/plugins/plugins.ini
@@ -11,17 +11,18 @@
 # license: nameOfLicense
 # language: cpp/c/python/py
 # stage: stageNumber
-[testPlugin]
-author: Hector Stalker
-license: BSD 2-Clause
-language: cpp
-stage: 1
 
-[testPluginPython]
-author: Hector Stalker
-license: BSD 2-clause
-language: python
-stage: 2
+#[testPlugin]
+#author: Hector Stalker
+#license: BSD 2-Clause
+#language: cpp
+#stage: 1
+
+#[testPluginPython]
+#author: Hector Stalker
+#license: BSD 2-clause
+#language: python
+#stage: 2
 
 [RawToIntermediate]
 author: Hector Stalker
