--- a/plugins/RawToIntermediate/CMakeLists.txt
+++ b/plugins/RawToIntermediate/CMakeLists.txt
@@ -107,7 +107,7 @@ set(PLUGIN_SOURCES
     src/Main.cpp
 )
 
-add_executable(${PROJECT_NAME} ${PLUGIN_SOURCES})
+add_executable(${PROJECT_NAME} EXCLUDE_FROM_ALL ${PLUGIN_SOURCES})
 
 target_link_libraries(${PROJECT_NAME} libLUCID)
 
