-Implemented basic pairing algorithm (doesn't currently output results) -Reorganised LANEman.py and build scripts to force python plugins into their own directories in ./build/bin

--- a/plugins/plugins.ini
+++ b/plugins/plugins.ini
@@ -12,18 +12,6 @@
 # language: cpp/c/python/py
 # stage: stageNumber
 
-#[testPlugin]
-#author: Hector Stalker
-#license: BSD 2-Clause
-#language: cpp
-#stage: 1
-
-#[testPluginPython]
-#author: Hector Stalker
-#license: BSD 2-clause
-#language: python
-#stage: 2
-
 [RawToIntermediate]
 author: Hector Stalker
 license: BSD 2-clause
@@ -35,3 +23,9 @@ author: Hector Stalker & Sam Kittle
 license: BSD 2-clause
 language: cpp
 stage: 1
+
+[Pairing]
+author: Sam Kittle
+license: BSD 2-clause
+language: python
+stage: 2
