-Separated the build system from LANEman -Renamed libLUCID to libLANE -Added ability to change active plugins using LANEman depending upon the set project -Wrote a small installer script for LANE, and a small script for joining up files into a bigger file -Made some fixes to the doxygen documentation for LANE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 find_package(Doxygen)
 
-include_directories(lib/libLUCID/include)
+include_directories(lib/libLANE/include)
+
+add_custom_target(plugins ALL)
+add_custom_target(tools ALL)
 
 add_subdirectory(doc)
 add_subdirectory(lib)
