--- a/plugins/BasicClusterAnalysis/CMakeLists.txt
+++ b/plugins/BasicClusterAnalysis/CMakeLists.txt
@@ -110,7 +110,7 @@ set(PLUGIN_SOURCES
 
 add_executable(${PROJECT_NAME} EXCLUDE_FROM_ALL ${PLUGIN_SOURCES})
 
-target_link_libraries(${PROJECT_NAME} libLUCID)
+target_link_libraries(${PROJECT_NAME} libLANE)
 
 set_target_properties(${PROJECT_NAME}
     PROPERTIES RUNTIME_OUTPUT_DIRECTORY
