--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,5 @@ install:
   - if [ "$CXX" == "g++" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50; fi
 
 script: 
-  - make plugins
-  - make tools
+  - make all
   - make check
