-Implemented basic LUCID raw data parsing in python -Changed the LUCID raw data parser to stop discarding 0 valued pixels -Added the data, results and binaries paths to the plugins.ini instead of having them as constants in the LANEman.py script -Modified the RawToIntermediate module to not convert to LANE format if a .lane file of the same name already exists

--- a/plugins.ini
+++ b/plugins.ini
@@ -18,6 +18,9 @@
 [GlobalSettings]
 version: 0.1
 project: LUCID
+resultsPath: ./results
+dataPath: ./data
+binariesPath: ./bin
 
 [RawToIntermediate]
 project: all
