Updated C++11 compiler support checking in cmake files. Updated the module names to follow camelCase as opposed to CamelCase

--- a/modules/BasicClusterAnalysis/CMakeLists.txt
+++ b/modules/BasicClusterAnalysis/CMakeLists.txt
@@ -1,6 +1,6 @@
 ##############################################################################
 # basicClusterAnalysis module build configuration script
-project(BasicClusterAnalysis)
+project(basicClusterAnalysis)
 
 
 
