--- a/modules/Pairing/CMakeLists.txt
+++ b/modules/Pairing/CMakeLists.txt
@@ -3,8 +3,8 @@
 project(pairing)
 
 set(plugin_sources
-    src/Pairing.py
-    src/ReadBCA.py
+    src/pairing.py
+    src/readBCA.py
 )
 
 install(FILES ${plugin_sources} DESTINATION ${CMAKE_INSTALL_PREFIX}/modules/${PROJECT_NAME})
