Fixed filename case changes. Updated modules and runLane.py in order to pass paths for the masks, calibration matrices and chip configurations to the modules upon running. Updated the configLane.py config.ini template. Moved the install final directories for the earlier mentioned paths out of the data directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,9 @@ endif()
 # Setup base install commands
 install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/modules)")
 install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/data)")
-install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/data/lucid)")
-install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/data/masks)")
-install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/data/calibration)")
-install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/data/configurations)")
+install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/masks)")
+install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/calibrations)")
+install(CODE "FILE(MAKE_DIRECTORY \${CMAKE_INSTALL_PREFIX}/configurations)")
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/scripts DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(FILES ${CMAKE_SOURCE_DIR}/configLane.py DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(FILES ${CMAKE_SOURCE_DIR}/runLane.py DESTINATION ${CMAKE_INSTALL_PREFIX})
