--- a/modules/RawToIntermediate/CMakeLists.txt
+++ b/modules/RawToIntermediate/CMakeLists.txt
@@ -1,17 +1,9 @@
 ##############################################################################
-# RawToIntermediate module build configuration script
+# rawToIntermediate conversion module build configuration script
 project(rawToIntermediate)
 
-
-
-##############################################################################
-# Build module
-set(module_sources
-    src/Main.cpp
+set(plugin_sources
+    src/rawToIntermediate.py
 )
 
-add_executable(${PROJECT_NAME} ${module_sources})
-
-target_link_libraries(${PROJECT_NAME} lane)
-
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/modules/${PROJECT_NAME})
+install(FILES ${plugin_sources} DESTINATION ${CMAKE_INSTALL_PREFIX}/modules/${PROJECT_NAME})
